fix toauch on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -239,7 +239,7 @@ body img {
 	display: block;
 	position: relative;
 	background: #000;
-	height: 100%;
+	height: 80%;
 	width: 4px;
 	border-radius: 10px;
 	margin: 0 3px;
